# RPi-LED-Sign-Controller

./: .gitignore  Cargo.toml  README.md  build.rs  led-sign-controller.service
docs/: API.md
scripts/: install.sh  uninstall.sh
src/: app_storage.rs  display_manager.rs  embedded_graphics_support.rs  handlers.rs  main.rs  models.rs  playlist_storage.rs  privilege.rs  storage_manager.rs
src/config/: cli.rs  display.rs  env.rs  mod.rs
src/display/: manager.rs  mod.rs  update_loop.rs
src/display/driver/: mod.rs  options.rs  rpi_led_matrix_driver.rs  rpi_led_panel_driver.rs
src/display/graphics/: embedded_graphics_support.rs  mod.rs
src/display/renderer/: animation.rs  border.rs  clock.rs  context.rs  image.rs  mod.rs  text.rs
src/led_driver/: mod.rs  options.rs  rpi_led_matrix_driver.rs  rpi_led_panel_driver.rs
src/models/: animation.rs  border_effects.rs  clock.rs  content.rs  image.rs  mod.rs  playlist.rs  preview.rs  settings.rs  text.rs
src/renderer/: border.rs  mod.rs  text.rs
src/storage/: app_storage.rs  manager.rs  mod.rs
src/utils/: mod.rs  privilege.rs  static_assets.rs  uuid.rs
src/web/: mod.rs  static_assets.rs
src/web/api/: display.rs  events.rs  images.rs  mod.rs  playlist.rs  preview.rs  settings.rs
static/: README.md  editor.html  index.html
static/css/: style.css
static/js/: app.js  editor.js  editorManager.js  playlist.js  playlistManager.js  textEditor.js  utils.js
