[package]
name = "rpi_led_sign_controller"
description= "Controlls a led matrix display with various features and a web config interface."
authors = ["Paul-Vincent Roll"]
repository = "https://github.com/paviro/rpi-led-sign-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
rpi-led-panel = "0.6"
rpi-led-matrix = "0.4"
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"
axum = "0.7.2"
axum-embed = "0.1"
rust-embed = "8.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
mime_guess = "2.0.4"
once_cell = "1.17.1"
dirs = "4.0.0"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.24"
argh = "0.1.3"
ctrlc = "3.2"
